--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="popup__content-menu">
           <div class="popup__menu-head">
             <img
-              src="./images/LogoBlack.svg"
+              src="./images/logoBlack.svg"
               alt="logo burger"
               class="popup__menu-title"
             />
